# ecir25-corpus-subsampling

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
corpus_subsampling/: corpus_graph.py  corpus_graph_pyterrier.py  experiments.py  sampling.py
corpus_subsampling/carbon_footprints/: README.md  aggregate-data.py  materialize_corpora.py  monitor-carboon-footprint.py  run-beir-pipelines.py  run-beir-pipelines.sh  run-colbert-pipelines.sh  run-plaid-pipelines.py  run-pyterrier-pipelines.py  run-pyterrier-pipelines.sh
corpus_subsampling/run_files/: __init__.py
ir_datasets_subsample/: README.md  example.py  pyproject.toml  retrieval-example-rag-2024.ipynb  retrieval-example.ipynb
ir_datasets_subsample/ir_datasets_subsample/: __init__.py  reformatted_corpora.py
ir_datasets_subsample/tests/: test_clueweb09.py  test_clueweb12.py  test_fast_clueweb09.py  test_fast_clueweb12.py  test_rag_2024.py
notebooks/: carbon-footprint-eval.ipynb  create-table-corpus-graph.py  create-table-foo.py  create-table-retrieval-on-subsamples.py  evaluation.ipynb
paper/: ecir25-corpus-subsampling-frame.tex  ecir25-corpus-subsampling-lit.bib  ecir25-corpus-subsampling-part1.tex  ecir25-corpus-subsampling-part2.tex  ecir25-corpus-subsampling-part3.tex  ecir25-corpus-subsampling-part4.tex  ecir25-corpus-subsampling-pre.tex  table-recommendet-subsamples.tex  table-theoretical-validation.tex
tests/: TestAssignmentOfRunsToGroups.test_all_runs.approved.txt  test_assignment_of_runs_to_groups.py  test_complete_corpus_sampler.py  test_filtering_run_to_subcorpus.py  test_judgment_pool_corpus_sampler.py  test_loft_sampling.py  test_re_rank_corpus_sampler.py  test_run_evaluation_on_subcorpora.py  test_run_pool_corpus_sampler.py
(+24 files in other folders)
