
[options]
python_requires = >=3.9
include_package_data = True
packages = find:
install_requires =
    tira
    trectools

[options.extras_require]
test =
    pytest
    approvaltests==7.3.0
dev =
    coverage
    coverage-badge
    black
    flake8
    isort
    mypy


[flake8]
max-line-length = 120
extend-ignore = E203
include = corpus_subsampling,test
max-complexity = 10